# coredoc

./: AUTHORS  INSTALL  Makefile  Makefile.am  README  README.md  autogen  cli.lua  configure.ac  coredoc  coredoc.c  coredoc.h  coredoc_styles.css  generator.lua  html.h  index.html  index.md  installer.lua  installing.html  main.c  main.lua  markdown.c  markdown.h  ssg.lua  utils.c  utils.h
docs/: coredoc_files.list  coredoc_footer.html  coredoc_header.html
docs/src/: index.md  installing.md
